tests/netconvert/import/XML/errors/broken_edge/edge#length__false4/errors.netconvert
Error: Attribute 'length' in definition of edge '4' Invalid Number Format .
Quitting (on error).
